<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidExamples</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="file">File</string>
    <string name="create_new">New</string>
    <string name="open">Open</string>
    <string name="play">Play</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Enter product name</string>
    <string name="title_activity_context_menu">ContextMenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_recent_found">No recent found!</string>

</resources>
