<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/file"
            android:title="@string/file">
        <!-- "file" submenu -->
        <menu>
            <item
                    android:id="@+id/create_new"
                    android:title="@string/create_new"/>
            <item
                    android:id="@+id/open"
                    android:title="@string/open"/>
        </menu>
    </item>
    <item
            android:id="@+id/play"
            android:title="@string/play"
            android:icon="@android:drawable/ic_media_play">

    </item>

    <item
            android:id="@+id/search_action"
            android:title="@string/menu_search"
            android:icon="@android:drawable/ic_menu_search"
            android:actionViewClass="android.widget.SearchView"
            android:showAsAction="ifRoom|collapseActionView">
    </item>

</menu>
